# config

./: .gitignore  .zshrc  CLAUDE.md  README.md  karabiner.edn  karabiner.md  yabairc
.packx_cache/: cache.json
asciinema/: config.toml
atuin/: config.toml
borders/: bordersrc
docs/: yabai-focus-tracking-setup.md
espanso/: cursor.yml
gcloud/: .last_survey_prompt.yaml  .last_update_check.json
gh/: hosts.yml
git/: ignore
karabiner/: karabiner.json
launch-focus/: Cargo.toml
launch-focus/src/: main.rs
mole/: clean-list.txt
op/: plugins.sh
opencode/: opencode.json  tsconfig.json
prompts/: cleancode.md
scripts/: adjust_focused_window_for_border.sh  arrange_apps_bsp.sh  arrange_apps_to_spaces.sh  auto_arrange_startup_apps.sh  capture_display_ids.sh  configure_borders.sh  debug_mouse_display.sh  detach_chrome_tab.sh  detach_chrome_tab_native.sh  detach_chrome_tab_shortcut.sh  display_mapping.sh  fix_floats.sh  fix_mission_control_sync.sh  fix_space_display_safe.sh  focus_direction.sh  focus_east.sh  focus_next_window_same_app.sh  focus_next_window_same_app_fast.sh  focus_north.sh  focus_previous_window_same_app.sh  focus_south.sh  focus_west.sh  launch_focus_app.sh  launch_focus_app_fast.sh  list_spaces_and_windows.sh  log_helper.sh  log_yabai_focus.sh  manage_space_on_mouse_display.sh  manage_space_window.sh  mouse_space_left.sh  mouse_space_right.sh  move-window-east.sh  move-window-west.sh  move_to_next_display.sh  move_to_previous_display.sh  move_window_center_66.sh  move_window_center_full.sh  move_window_east.sh  move_window_left.sh  (+36 more)
(+222 files in other folders)
