[package]
name = "launch-focus"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
